; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4au/class/java/nio/extr_ByteBuffer.util.c_J4AC_java_nio_ByteBuffer__getDirectBufferAddress__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4au/class/java/nio/extr_ByteBuffer.util.c_J4AC_java_nio_ByteBuffer__getDirectBufferAddress__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @J4AC_java_nio_ByteBuffer__getDirectBufferAddress__catchAll(%struct.TYPE_5__** %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = bitcast {}** %9 to i8* (%struct.TYPE_5__**, i32)**
  %11 = load i8* (%struct.TYPE_5__**, i32)*, i8* (%struct.TYPE_5__**, i32)** %10, align 8
  %12 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i8* %11(%struct.TYPE_5__** %12, i32 %13)
  store i8* %14, i8** %6, align 8
  %15 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %16 = call i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__** %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %2
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %18, %2
  store i8* null, i8** %3, align 8
  br label %24

22:                                               ; preds = %18
  %23 = load i8*, i8** %6, align 8
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %22, %21
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}

declare dso_local i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
